--- a/index.html
+++ b/index.html
@@ -7,6 +7,56 @@
     <title>Document</title>
 </head>
 <body>
-    
-</body>
+    <header>
+        <nav>
+        <a href=""><img src="./images/logosite.svg" alt="logosite" width="115" height="24"></a>
+        <ul>
+            <li>Studio</li>
+            <li>Portfolio</li>
+            <li>Contacts</li>
+        </ul>
+        </nav>
+        <ul>
+            <li>
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+                <a href="telto:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+            </li>
+        </ul>
+    </header>
+
+    <main>
+        <section>
+            <br>Effective Solutions </br>
+            for Your Business</h1> </br>
+            <button type="button">Order Service</button>
+        </section>
+
+        <section>
+            <ul>
+                <li>
+                    <h2>Strategy</h2>
+                        <p>Our goal is to identify the business
+                        problem to walk away with the perfect and creative solution.</p>
+                </li>
+                <li>
+                    <h2>Punctuality</h2>
+                        <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                </li>
+                <li>
+                    <h2>Diligence</h2>
+                        <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                    </h2>
+                </li>
+                <li>
+                    <h2>Technologies</h2>
+                        <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                </li>
+            </ul>
+        </section>
+        <section></section>
+    </main>
+    <footer></footer>
 </html>
+
