--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-        <a href=""><span>Web</span>Studio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
             <li>
                 <a href="">Studio</a>
@@ -23,21 +23,21 @@
         </ul>
         </nav>
 
+        <address>
         <ul>
             <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a href="mail:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
                 <a href="tel:+110001111111">+110001111111</a>
             </li>
         </ul>
+        </address>
     </header>
 
     <main>
-        <section>
             <h1>Effective Solutions for Your Business</h1> 
             <button type="button">Order Service</button>
-        </section>
         <!-- <h2>Discription</h2>  -->
         <section>
             <ul>
@@ -60,6 +60,7 @@
                 </li>
             </ul>
         </section>
+        <!-- <h1>Our team</h1>  -->
         <h2>Our team</h2>
         <ul>
             <li>
@@ -85,7 +86,7 @@
         </ul>
     </main>
     <footer>
-        <a href=""><span>Web</span>Studio</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </html>
