--- a/index.html
+++ b/index.html
@@ -26,20 +26,22 @@
         <address>
         <ul>
             <li>
-                <a href="mail:info@devstudio.com">info@devstudio.com</a>
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
-                <a href="tel:+110001111111">+110001111111</a>
+                <a href="tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
         </ul>
         </address>
     </header>
 
     <main>
+        <section>
             <h1>Effective Solutions for Your Business</h1> 
             <button type="button">Order Service</button>
-        <!-- <h2>Discription</h2>  -->
+        </section>
         <section>
+            <h2 hidden>Discription</h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
@@ -60,7 +62,6 @@
                 </li>
             </ul>
         </section>
-        <!-- <h1>Our team</h1>  -->
         <h2>Our team</h2>
         <ul>
             <li>
