--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                 </li>
             </ul>
         </section>
+        <section>
         <h2>Our team</h2>
         <ul>
             <li>
@@ -85,6 +86,7 @@
                     <p>UI Designer</p>
             </li>
         </ul>
+        </section>
     </main>
     <footer>
         <a href="./index.html">WebStudio</a>
