--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </section>
 
         <section>
-        <h2>Our team</h2>
+        <h2>Our Team</h2>
         <ul>
             <li>
                 <img src="./images/mark.jpg" alt="Mark Guerrero" width="264">
